# codebase

./: .gitignore  LICENSE  README.md
mavis/: .coveragerc  .dockerignore  .editorconfig  .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  .sentryclirc  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
mavis/.github/: dependabot.yml  pull_request_template.md
mavis/.github/workflows/: approve_release.yml  build.yml  code_review.yml  release.yml  semgrep.yml  task_check.yml  test.yml
mavis/batch_jobs/: __init__.py  custom_task.py  dramatiq.py  main.py  maintenance.py  middleware.py  monitor.py  task_manager.py
mavis/batch_jobs/data_bridging/: check_fivetran_sync.py  copy_query_to_warehouse.py  grant_missing_access.py  index_warehouse.py  run_onboarding.py
mavis/batch_jobs/data_management/: async_actions.py  check_for_new_activities.py  clean_tables.py  clear_old_query_updates.py  delete_archived_buckets.py  index_activity_dims.py  materialize_dataset.py  resync_indexes.py  resync_narrative.py  run_narrative.py  run_narrative_integration.py  run_query.py  run_sql_query_alert.py  run_transformations.py  sync_to_stripe.py  update_popular_tags.py  validate_stream_assumptions.py
mavis/batch_jobs/migrations/: add_processing_task.py  auto_layout_dashboard.py  check_used_graph_queries.py  clean_up_auth0.py  clean_up_buckets.py  compile_all_queries_test.py  create_company.py  create_custom_materialization.py  create_demo_starter_data.py  create_gsheet_keys.py  delete_internal_admin.py  download_schema.py  end_maintenance.py  enrich_input_data.py  finserv_track_stocks.py  fix_activity_stream.py  fix_identity_resolution.py  fix_incremental_materialized_views.py  fix_mapping.py  (+10 more)
mavis/core/: constants.py  dramatiq_dashboard.py  errors.py  flags.py  github_client.py  logger.py  s3_data.py  ttl_cache.py  utils.py
mavis/gql_codegen/: README.md  plugins.py
mavis/heartbeat/: helpers.py  main.py  scheduler.py  sqs_consumer.py
mavis/mavis_worker_bouncer/: main.py  mavis_worker_bouncer_test.py
mavis/scripts/: deploy.sh  generate_job_schemas.py  graph_codegen.sh  output_openapi.py  package.sh
mavis/tests/: asteval_test.py  conftest.py  errors_test.py  fields_parser_test.py  initialize_company_test.py  s3_data_test.py  utils_test.py
(+5392 files in other folders)
